2003-01-28  Kim F. Storm  <storm@cua.dk>

	* info.el (Info-extract-menu-node-name): Another fix for
	2003-01-24 change.  Also stop search if : is followed by TAB.

2003-01-28  John Paul Wallington  <jpw@gnu.org>

	* ibuf-ext.el (ibuffer-yank-filter-group): Move check for empty
	`ibuffer-filter-group-kill-ring' out of `interactive' declaration.

2003-01-28  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* progmodes/cc-vars.el, progmodes/cc-mode.el
	(c-require-final-newline): Made this variable an alist to
	specify a value for each language.  The default value causes
	`require-final-newline' to be set to t only in languages where
	the standard requires a final newline.

2003-01-27  Kim F. Storm  <storm@cua.dk>

	* simple.el (kill-new): Improve doc string for yank-handler.
	Signal args-out-of-range error if yank-handler is specified for
	an empty string.

	* subr.el (insert-for-yank): Remove COMMAND element from yank
	handler.

2003-01-27  Dave Love  <fx@gnu.org>

	* dired-x.el (dired-filename-at-point): Fix last change and tidy up.

	* thingatpt.el (thing-at-point-file-name-chars):  Include
	non-ASCII again and re-write the filename ops.

2003-01-27  David Ponce  <david@dponce.com>

	* makefile.w32-in (update-subdirs-SH): Create lisp/subdirs.el.

2003-01-27  Juanma Barranquero  <lektu@terra.es>

	* filesets.el (filesets-file-open): Fix typo.

	* vcursor.el (vcursor-disable): Likewise.

	* eshell/esh-cmd.el (eshell-separate-commands): Likewise.

	* progmodes/cc-styles.el (c-make-styles-buffer-local): Likewise.

	* progmodes/cc-vars.el (c-offsets-alist): Likewise.

	* progmodes/ebrowse.el (ebrowse-draw-tree-fn): Likewise.

2003-01-26  Martin Stjernholm  <bug-cc-mode@gnu.org>

	* progmodes/cc-vars.el, progmodes/cc-mode.el
	(c-require-final-newline): Added a variable to make the
	initialization of `require-final-newline' more configurable.

2003-01-26  Jan D.  <jan.h.d@swipnet.se>

	* emacs-lisp/authors.el (authors-aliases): Add Jan D.
	Set iso-2022-7bit coding: cookie.
