@@ -1,3 +1,10 @@
+2003-01-28  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>
+
+	* macterm.c (keycode_to_xkeysym_table): Add <tab>, <backspace>,
+	<escape>.
+	(keycode_to_xkeysym_table): Reformat and add more comments.
+	(XTread_socket): Drop special case for backspace.
+
 2003-01-28  Andrew Choi  <akochoi@shaw.ca>
 
 	* macfns.c (x_to_mac_color): Correct the order for parsing the RGB
